--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to the homepage for Rose-Hulman's Data Science Program!
+description: This page is the initial landing site for the Data Science program and courses at Rose-Hulman.
